feat(backend): added annotations for pages handler
